move posts into public/system when local, gitignore public/system, show user that posted each mp3, focus login box on sign in page

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,3 @@
 <a id="<%= "post-#{post.id}" %>" href="<%= post.attachment.url %>">
-  <span class="mp3"><%= h(post.title) %> &mdash; <%=h post.artist %> &mdash; <%=h post.album %></span>
+  [<%=h post.user %>] <%= h(post.title) %> &mdash; <%=h post.artist %> &mdash; <%=h post.album %>
 </a>
