--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -15,3 +15,4 @@ p { margin: 1em 0; }
 .playable {}
 .playing {background:#eeeeec;}
 .paused {background:#eeeeec;}
+#flash div {text-align:center; padding:5px 0; margin-bottom:15px;}
