--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -18,22 +18,20 @@
   		debug: false
   	})
     	.bind('fileQueued', function(event, file){
-    		var listitem='<li id="'+file.id+'" >'+
-    			file.name+' ('+number_to_human_size(file.size)+') <span class="progressvalue">Pending...</span>'+
-    			'<div class="progressbar"><div class="progress"></div></div></li>';
+    		var listitem='<li class="pending" id="'+file.id+'" >'+'[<%= current_user %>] '+
+    		  file.name+' ('+human_size(file.size)+') <span class="progress">Pending...</span>';
     		$('#swfupload-playlist').prepend(listitem);
     		$(this).swfupload('startUpload');
     	})
     	.bind('uploadStart', function(event, file){
-    		$('#swfupload-playlist li#'+file.id).find('span.progressvalue').text('0%');
+    		$('#swfupload-playlist li#'+file.id).find('.progress').text('Uploading... 0%');
     	})
     	.bind('uploadProgress', function(event, file, bytesLoaded){
     		var percentage=Math.round((bytesLoaded/file.size)*100);
-    		$('#swfupload-playlist li#'+file.id).find('div.progress').css('width', percentage+'%');
-    		$('#swfupload-playlist li#'+file.id).find('span.progressvalue').text('Uploading... '+percentage+'%');
+    		$('#swfupload-playlist li#'+file.id).find('.progress').text('Uploading... '+percentage+'%');
     	})
     	.bind('uploadSuccess', function(event, file, serverData){
-    		$('#swfupload-playlist li#'+file.id).html($(serverData).fadeIn(1000));
+    		$('#swfupload-playlist li#'+file.id).html($(serverData).fadeIn(1000)).removeClass('pending');
     		$('#swfupload-playlist li#'+file.id+' a').each(function(){
           $(this).makePlayable();
         });
