--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -11,7 +11,7 @@
 -------------------------------------------------------------- */
 
 label       { font-weight: bold; }
-fieldset    { padding:1.4em; margin: 0 0 1.5em 0; border: 1px solid #ccc; }
+fieldset    { padding:1.4em; margin: 0 0 1.5em 0; border: 1px solid #dedede; }
 legend      { font-weight: bold; font-size:1.2em; }
 
 
@@ -22,12 +22,12 @@ input[type=text], input[type=password],
 input.text, input.title,
 textarea, select {
   background-color:#fff;
-  border:1px solid #bbb;
+  border:1px solid #dedede;
 }
 input[type=text]:focus, input[type=password]:focus,
 input.text:focus, input.title:focus,
 textarea:focus, select:focus {
-  border-color:#666;
+  border-color:#999;
 }
 
 input[type=text], input[type=password],
