more invitation stuff, form in place

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>KZAK!</title>
   <%= stylesheet_link_tag 'reset', '960', 'forms', 'application', :cache => true %>
-  <%= javascript_include_tag 'jquery', 'soundmanager', 'swfupload', 'jquery.swfupload', 'application', :cache => true  %>
+  <%= javascript_include_tag 'jquery', 'soundmanager', 'swfupload', 'jquery.swfupload', 'jquery.hint', 'application', :cache => true  %>
   <%= yield :head %>
 </head>
 <body>
