--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,5 +31,9 @@
       <li><%= render user %></li>
     <% end if @users %>
   </ul>
+  
+  <h2 class="pad_top">invite a new user</h2>
+  
+  <%= render 'invitations/form' %>
 
 </div>
