--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,3 +16,6 @@ p { margin: 1em 0; }
 #flash div {text-align:center; padding:5px 0; margin-bottom:15px;}
 .pad_top {margin-top:20px;}
 .disabled, .pending {color:#999;}
+.invitation_email {width:100%;padding:4px 0px;text-align:right;color:#999;}
+.invitation_email:focus {color:#111;}
+.invitation_email_submit {margin-top:-1em;}
