--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -1,5 +1,7 @@
 /* --------------------------------------------------------------
 
+   via http://www.blueprintcss.org/
+
    forms.css
    * Sets up some default styling for forms
    * Gives you classes to enhance your forms
