--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
 <div id="users" class="grid_2">
 
-  <h2>Following</h2>
+  <h2>following</h2>
 
   <ul>
     <% if @user.followings.present? %>
@@ -24,7 +24,7 @@
     <% end %>
   </ul>
 
-  <h2 class="pad_top">Followers</h2>
+  <h2 class="pad_top">followers</h2>
 
   <ul>
     <% if @user.followers %>
@@ -35,5 +35,5 @@
       <li class="disabled">n/a</li>
     <% end %>
   </ul>
-  
+    
 </div>
