--- a/app/views/invitations/_error.html.erb
+++ b/app/views/invitations/_error.html.erb
@@ -1,1 +1,1 @@
-<span class="error"><%= @invitation.email %> is not a valid email address</span>
+<span class="error"><%= @invitation.email %> is invalid or already in use</span>
