--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,8 @@
   <h2>Sign up</h2>
 
   <% form_for User.new do |f| -%>
-    <%= f.hidden_field :invitation, :value => params[:invitation] %>
+    <%= f.hidden_field :invitation, :value => @invitation.code %>
+    <%= f.hidden_field :email, :value => @invitation.email %>
     <p><%= f.label :login %> <br /> <%= f.text_field :login, :class => 'text' %></p>
     <p><%= f.label :password %> <br /> <%= f.password_field :password, :class => 'text' %></p>
     <p><%= f.label :password_confirmation %> <br /> <%= f.password_field :password_confirmation, :class => 'text' %></p>
