--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,7 @@
   <h2>Sign up</h2>
 
   <% form_for User.new do |f| -%>
+    <%= error_messages_for :user %>
     <%= f.hidden_field :invitation, :value => @invitation.code %>
     <%= f.hidden_field :email, :value => @invitation.email %>
     <p><%= f.label :login %> <br /> <%= f.text_field :login, :class => 'text' %></p>
