--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,3 @@
-<a id="<%= "post-#{post.id}" %>" href="<%= post.attachment.url %>">
+<a id="<%= "post-#{post.id}" %>" href="<%= post.url %>">
   [<%=h post.user %>] <%= h(post.title) %> &mdash; <%=h post.artist %> &mdash; <%=h post.album %>
 </a>
