--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -4,7 +4,7 @@
       upload_url : '<%= posts_path %>',
       flash_url : '/flash/swfupload.swf',
       file_size_limit : '100000',
-      file_types : '*.mp3',
+      file_types : '*.mp3;*.m4a',
       file_types_description : 'mp3s',
       file_upload_limit : '0',
   		button_image_url: '/images/upload.png',
