--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>KZAK!</title>
   <%= stylesheet_link_tag 'reset', '960', 'forms', 'application', :cache => true %>
-  <%= javascript_include_tag 'jquery', 'soundmanager', 'swfupload', 'jquery.form', 'jquery.swfupload', 'jquery.hint', 'application', :cache => true  %>
+  <%= javascript_include_tag 'jquery', 'soundmanager2-nodebug-jsmin', 'swfupload', 'jquery.form', 'jquery.swfupload', 'jquery.hint', 'application', :cache => true  %>
   <%= yield :head %>
 </head>
 <body>
