--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -1,47 +1,61 @@
 <script type="text/javascript">
-  $(function(){
-  	$('#swfupload-control').swfupload({
-      upload_url : '<%= posts_path %>',
-      flash_url : '/flash/swfupload.swf',
-      file_size_limit : '100000',
-      file_types : '*.mp3;*.m4a',
-      file_types_description : 'mp3s',
-      file_upload_limit : '0',
-  		button_image_url: '/images/upload.png',
-  		button_width: '64',
-  		button_height: '27',
-  		button_placeholder_id: 'swfupload-button',
-  		post_params: {
-  		  '<%= ActionController::Base.session_options[:key] %>' : '<%= cookies[ActionController::Base.session_options[:key]] %>',
-  		  'authenticity_token' : '<%= form_authenticity_token %>'
-  		},
-  		debug: false
-  	})
-    	.bind('fileQueued', function(event, file){
-    		var listitem='<li class="pending" id="'+file.id+'" >'+'[<%= current_user %>] '+
-    		  file.name+' ('+human_size(file.size)+') <span class="progress">Pending...</span>';
-    		$('#swfupload-playlist').prepend(listitem);
-    		$(this).swfupload('startUpload');
-    	})
-    	.bind('uploadStart', function(event, file){
-    		$('#swfupload-playlist li#'+file.id).find('.progress').text('Uploading... 0%');
-    	})
-    	.bind('uploadProgress', function(event, file, bytesLoaded){
-    		var percentage=Math.round((bytesLoaded/file.size)*100);
-    		if (percentage < 100 ){
-    		  $('#swfupload-playlist li#'+file.id).find('.progress').text('Uploading... '+percentage+'%');
-    		}else{
-    		  $('#swfupload-playlist li#'+file.id).find('.progress').text('Processing...');
-    		}
-    	})
-    	.bind('uploadSuccess', function(event, file, serverData){
-    		$('#swfupload-playlist li#'+file.id).html($(serverData).fadeIn(1000)).removeClass('pending');
-    		$('#swfupload-playlist li#'+file.id+' a').each(function(){
-          $(this).makePlayable();
-        });
-    	})
-    	.bind('uploadComplete', function(event, file){
-    		$(this).swfupload('startUpload');
-    	})
+  $(document).ready(function(){
+    if ($('#swfupload-button').length) {
+      var swfu;
+      swfu = new SWFUpload({
+        debug : false,
+        flash_url : '/flash/swfupload.swf',
+        upload_url : '/posts',
+        post_params : {
+          '<%= ActionController::Base.session_options[:key] %>' : '<%= cookies[ActionController::Base.session_options[:key]] %>',
+          'authenticity_token' : '<%= form_authenticity_token %>'
+        },
+        button_image_url : '/images/upload.png',
+        button_placeholder_id : "swfupload-button",
+        button_width: 64,
+        button_height: 27,
+        file_size_limit : "100 MB",
+        file_types : '*.mp3;*.m4a',
+        file_types_description : "mp3 and m4a Files",
+        file_upload_limit : 100,
+        file_queued_handler : fileQueued,
+        upload_start_handler : uploadStart,
+        upload_progress_handler : uploadProgress,
+        upload_success_handler : uploadSuccess,
+        upload_complete_handler : uploadComplete,
+        minimum_flash_version : "9.0.28"
+      });
+    }
+
+    function fileQueued(file){
+      var listitem='<li class="pending" id="'+file.id+'" >'+file.name+' ('+human_size(file.size)+') <span class="progress">Pending...</span>';
+      $('#swfupload-playlist').prepend(listitem);
+      this.startUpload();
+    }
+
+    function uploadStart(file){
+      $('#swfupload-playlist li#'+file.id).find('.progress').text('Uploading... 0%');
+    	return true;
+    }
+
+    function uploadProgress(file, bytesLoaded, bytesTotal){
+      var percentage=Math.round((bytesLoaded/file.size)*100);
+      if (percentage<100){
+       $('#swfupload-playlist li#'+file.id).find('.progress').text('Uploading... '+percentage+'%');
+      }else{
+       $('#swfupload-playlist li#'+file.id).find('.progress').text('Processing...');
+      }
+    }
+
+    function uploadSuccess(file, serverData){
+      $('#swfupload-playlist li#'+file.id).html($(serverData).fadeIn(1000)).removeClass('pending');
+      $('#swfupload-playlist li#'+file.id+' a').each(function(){
+        $(this).makePlayable();
+      });
+    }
+
+    function uploadComplete(file){
+      this.startUpload();
+    }
   });
 </script>
