--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -5,7 +5,7 @@
       swfu = new SWFUpload({
         debug : false,
         flash_url : '/flash/swfupload.swf',
-        upload_url : '/posts',
+        upload_url : '<%= posts_path %>',
         post_params : {
           '<%= ActionController::Base.session_options[:key] %>' : '<%= cookies[ActionController::Base.session_options[:key]] %>',
           'authenticity_token' : '<%= form_authenticity_token %>'
