allow mp4 files

--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -15,8 +15,7 @@
         button_width: 64,
         button_height: 27,
         file_size_limit : "100 MB",
-        file_types : '*.mp3;*.m4a',
-        file_types_description : "mp3 and m4a Files",
+        file_types : '*.mp3;*.mp4;*.m4a',
         file_upload_limit : 100,
         file_queued_handler : fileQueued,
         upload_start_handler : uploadStart,
