--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -14,9 +14,9 @@
         button_placeholder_id : "swfupload-button",
         button_width: 64,
         button_height: 27,
-        file_size_limit : "100 MB",
+        file_size_limit : 0,
+        file_upload_limit : 0,
         file_types : '*.mp3;*.mp4;*.m4a',
-        file_upload_limit : 100,
         file_queued_handler : fileQueued,
         upload_start_handler : uploadStart,
         upload_progress_handler : uploadProgress,
