--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,1 @@
-<a id="<%= "post-#{post.id}" %>" class="post" href="<%= post.attachment_url %>">
-  <%= post.to_string %>
-</a>
+<a id="<%= "post-#{post.id}" %>" class="post" href="<%= post.mp3.url %>"><%= post %></a>
