--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,6 +30,7 @@
 
   <% if @user.followers %>
     <ul>
+      <% # TODO followings/followers ordering not working, so using sort_by here %>
       <% @user.followers.sort_by(&:login).each do |user| %>
         <li><%= render user %></li>
       <% end %>
