--- a/app/views/posts/_uploader.html.erb
+++ b/app/views/posts/_uploader.html.erb
@@ -22,8 +22,7 @@
         upload_start_handler : uploadStart,
         upload_progress_handler : uploadProgress,
         upload_success_handler : uploadSuccess,
-        upload_complete_handler : uploadComplete,
-        minimum_flash_version : "9.0.28"
+        upload_complete_handler : uploadComplete
       });
     }
 
