sort users by login.downcase

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,7 +29,7 @@
 
   <ul class="users">
     <% # TODO followings/followers ordering not working, so using sort_by here %>
-    <% @followings.sort_by(&:login).each do |user| %>
+    <% @followings.sort_by{|u| u.login.downcase}.each do |user| %>
       <li><%= render user %></li>
     <% end if @followings %>
   </ul>
