--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>KZAK!</title>
   <%= stylesheet_link_tag 'reset', '960', 'forms', 'application', :cache => true %>
   <%= javascript_include_tag 'jquery', 'jquery.form', 'jquery.hint', 'soundmanager2', 'swfupload', 'application', :cache => true  %>
+  <%= auto_discovery_link_tag :rss, "#{posts_url(:format => 'rss')}?auth_token=#{current_user.authentication_token}", 'RSS' if user_signed_in? %>
   <%= yield :head %>
 </head>
 <body>
