--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="grid_10">
 
-  <h2>playlist</h2>
+  <h2>playlist <a href="#shuffle" class="shuffle">shuffle</a></h2>
 
   <% if user_signed_in? %>
 
