--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="grid_10">
 
-  <h2><%=h @user %></h2>
+  <h2><%=h @user %> <a href="#shuffle" class="shuffle">shuffle</a></h2>
 
   <% if @user.posts.present? %>
     <ul class="playlist">
