--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
 
   <h2>Forgot your password?</h2>
 
-  <% form_for resource_name, resource, :url => password_path(resource_name) do |f| %>
+  <%= form_for resource, :as => resource_name, :url => password_path(resource_name) do |f| %>
     <%= f.error_messages %>
     <p><%= f.label :email %> <br /> <%= f.text_field :email, :class => 'text' %></p>
     <p><%= f.submit "Send password reset instructions" %></p>
