--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for Invitation.new do |f| %>
+<%= form_for Invitation.new do |f| %>
   <p><%= f.text_field :email, :class => 'invitation_email', :title => 'email address' %></p>
   <p><%= f.submit "send", :id => 'new_invitation_submit' %></p>
   <div id="new_invitation_status" class="small"></div>
