--- a/app/views/mailer/invitation.erb
+++ b/app/views/mailer/invitation.erb
@@ -1,3 +1,3 @@
-You have been invited to <%= CONFIG['app_name'] %> by <%= @user %>:
+You have been invited to <%= CONFIG['app_name'] %> by <%= @invitation.user %>:
 
-  <%= new_user_url(:invitation => @code) %>
+  <%= new_user_url(:invitation => @invitation.code) %>
