--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 
     <div id="swfupload-control">
     	<span id="swfupload-button"></span>
-    	<span id="upload-link"><%= link_to '&raquo;', new_post_path, :confirm => "Use the regular upload form instead?" %></span>
+    	<span id="upload-link"><%= link_to '»', new_post_path, :confirm => "Use the regular upload form instead?" %></span>
     </div>
 
     <% content_for :head do %>
