--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,7 @@
 
   <h2>Upload</h2>
 
-  <% form_tag posts_path, :id => 'new_post', :multipart => true do %>
+  <%= form_tag posts_path, :id => 'new_post', :multipart => true do %>
     <p><%= file_field_tag "Filedata" %></p>
     <p><%= submit_tag "upload", :id => "new_post_submit" %></p>
     <div id="new_post_status"></div>
