--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
   <h2>Sign up</h2>
 
-  <% form_for User.new do |f| %>
+  <%= form_for User.new do |f| %>
     <%= error_messages_for :user %>
     <%= f.hidden_field :invitation, :value => @invitation.code %>
     <%= f.hidden_field :email, :value => @invitation.email %>
