auto_discovery_link_tag fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>KZAK!</title>
   <%= javascript_include_tag 'jquery', 'rails', 'jquery.form', 'jquery.hint', 'jquery.shuffle', 'soundmanager2', 'swfupload', 'application', :cache => true %>
   <%= stylesheet_link_tag 'reset', '960', 'forms', 'application', :cache => true %>
-  <%= auto_discovery_link_tag :rss, rss_url, 'RSS' if user_signed_in? %>
+  <%= auto_discovery_link_tag :rss, rss_url, { :title => 'RSS' } if user_signed_in? %>
   <%= csrf_meta_tag %>
 </head>
 <body>
